--- a/static/stat562/hw_stat562.Rmd
+++ b/static/stat562/hw_stat562.Rmd
@@ -734,29 +734,32 @@ As long as $c\ge\max\limits_{a\le x\le b}f(x)$, $F_W(w)=\frac1{c(b-a)}\int_a^w f
 
 So we can calculate the beta probabilities from the uniform probabilities, which suggests that we can generate the beta random variable 
 
-```{r echo=FALSE, out.width='40%',collapse=T}
+```{r echo=FALSE, out.width='30%',collapse=T, fig.show='hold'}
 plot(c(0,1), c(0,3), type = "n",main="beta(2.7,6.3)",xlab ="x", ylab ="y")
 curve(dbeta(x,2.7,6.3, ncp = 0, log = FALSE),0,1,add =T)
 abline(h=dbeta((2.7-1)/(2.7+6.3-2),2.7,6.3, ncp = 0, log = FALSE),lty=3)
 abline(v=(2.7-1)/(2.7+6.3-2),lty=2);abline(v=0.5,lty=2)
-
-dbeta(0.2428571,2.7,6.3, ncp = 0, log = FALSE)
-qbeta(1/2.669744,2.7,6.3, ncp = 0, lower.tail = TRUE, log.p = FALSE)
-1-pbeta(1/2.669744,2.7,6.3, ncp = 0, lower.tail = TRUE, log.p = FALSE)
 
 plot(c(0,1), c(0,3), type = "n",main="beta(2,5)",xlab ="x", ylab ="y")
 curve(dbeta(x,2,5, ncp = 0, log = FALSE),0,1,add =T)
 abline(h=dbeta((2-1)/(2+5-2),2,5, ncp = 0, log = FALSE),lty=3);text(0,2.5, "c", col = 2, adj = c(0,0))
 abline(v=(2-1)/(2+5-2),lty=2);text(0.2,0, "1/b", col = 2, adj = c(-.1,0));abline(v=1/2,lty=2);text(0.5,0, "1/a", col = 2, adj = c(-.1,0))
 
-dbeta(0.3291,2,5, ncp = 0, log = FALSE)
-qbeta(1/2,2,5, ncp = 0, lower.tail = TRUE, log.p = FALSE)
-pbeta(1/2,2,5, ncp = 0, lower.tail = TRUE, log.p = FALSE)
-
 plot(c(0,10), c(0,0.5), type = "n",main="Geom(1/2.5)",xlab ="n", ylab ="p")
 points(c(0:20),dgeom(c(0:20), 1/2.5, log = FALSE))
 lines(c(0:20), dgeom(c(0:20), 1/2.5, log = FALSE), col = 2)
 ```
+
+```{r collapse=T}
+dbeta(0.2428571,2.7,6.3, ncp = 0, log = FALSE)
+qbeta(1/2.669744,2.7,6.3, ncp = 0, lower.tail = TRUE, log.p = FALSE)
+1-pbeta(1/2.669744,2.7,6.3, ncp = 0, lower.tail = TRUE, log.p = FALSE)
+
+dbeta(0.3291,2,5, ncp = 0, log = FALSE)
+qbeta(1/2,2,5, ncp = 0, lower.tail = TRUE, log.p = FALSE)
+pbeta(1/2,2,5, ncp = 0, lower.tail = TRUE, log.p = FALSE)
+```
+
 
  ---
 
@@ -772,24 +775,17 @@ $$f(\bar x,\theta)=f(\bar x|\theta)\pi(\theta)=\frac{1}{\sqrt{2\pi\frac{\sigma^2
  
  (b). Show that $m(\bar x|\sigma^2,\mu,\tau^2)$, the marginal distribution of $\bar X$, is $n(\mu,\frac{\sigma^2}n+\tau^2)$.
 
-
-
- - the left-bottom part in (a)
+ - the denominator part in (a)
 
 $$\sqrt{2\pi\frac{\sigma^2}n}\cdot\sqrt{2\pi\tau^2}=\sqrt{\frac{2\pi\tau^2\frac{\sigma^2}n}{\tau^2+\frac{\sigma^2}n}}\cdot\sqrt{2\pi(\tau^2+\frac{\sigma^2}n)}$$
 
  - the exponent part in (a)
 
-$$-\frac{(\bar x-\theta)^2}{2\frac{\sigma^2}n}-\frac{(\theta-\mu)^2}{2\tau^2}=
--\frac{(\tau^2+\frac{\sigma^2}n)\theta^2-2(\tau^2\bar x+\frac{\sigma^2}n\mu)\theta+\tau^2\bar x^2+\frac{\sigma^2}n\mu^2}
-{2\tau^2\frac{\sigma^2}n}$$
+$-\frac{(\bar x-\theta)^2}{2\frac{\sigma^2}n}-\frac{(\theta-\mu)^2}{2\tau^2}=-\frac{(\tau^2+\frac{\sigma^2}n)\theta^2-2(\tau^2\bar x+\frac{\sigma^2}n\mu)\theta+\tau^2\bar x^2+\frac{\sigma^2}n\mu^2}{2\tau^2\frac{\sigma^2}n}$
 
-$$=-\frac{(\tau^2+\frac{\sigma^2}n)^2\theta^2-2(\tau^2\bar x+\frac{\sigma^2}n\mu)(\tau^2+\frac{\sigma^2}n)\theta+\tau^2(\tau^2+\frac{\sigma^2}n)\bar x^2+\frac{\sigma^2}n(\tau^2+\frac{\sigma^2}n)\mu^2}
-{2\tau^2\frac{\sigma^2}n(\tau^2+\frac{\sigma^2}n)}$$
+$=-\frac{(\tau^2+\frac{\sigma^2}n)^2\theta^2-2(\tau^2\bar x+\frac{\sigma^2}n\mu)(\tau^2+\frac{\sigma^2}n)\theta+\tau^2(\tau^2+\frac{\sigma^2}n)\bar x^2+\frac{\sigma^2}n(\tau^2+\frac{\sigma^2}n)\mu^2}{2\tau^2\frac{\sigma^2}n(\tau^2+\frac{\sigma^2}n)}$
 
-$$=-\frac{(\tau^2+\frac{\sigma^2}n)^2\theta^2-2(\tau^2\bar x+\frac{\sigma^2}n\mu)(\tau^2+\frac{\sigma^2}n)\theta
-+(\tau^4\bar x^2+\frac{\sigma^4}{n^2}\mu^2+2\tau^2\frac{\sigma^2}n\bar x\mu)(-2\tau^2\frac{\sigma^2}n\bar x\mu+\tau^2\frac{\sigma^2}n\bar x^2+\tau^2\frac{\sigma^2}n\mu^2)}
-{2\tau^2\frac{\sigma^2}n(\tau^2+\frac{\sigma^2}n)}$$
+$=-\frac{(\tau^2+\frac{\sigma^2}n)^2\theta^2-2(\tau^2\bar x+\frac{\sigma^2}n\mu)(\tau^2+\frac{\sigma^2}n)\theta+(\tau^4\bar x^2+\frac{\sigma^4}{n^2}\mu^2+2\tau^2\frac{\sigma^2}n\bar x\mu)(-2\tau^2\frac{\sigma^2}n\bar x\mu+\tau^2\frac{\sigma^2}n\bar x^2+\tau^2\frac{\sigma^2}n\mu^2)}{2\tau^2\frac{\sigma^2}n(\tau^2+\frac{\sigma^2}n)}$
 
 $$=-\frac{(\tau^2+\frac{\sigma^2}n)^2\theta^2-2(\tau^2\bar x+\frac{\sigma^2}n\mu)(\tau^2+\frac{\sigma^2}n)\theta+(\tau^2\bar x+\frac{\sigma^2}n\mu)^2+\tau^2\frac{\sigma^2}n(\bar x-\mu)^2}
 {2\tau^2\frac{\sigma^2}n(\tau^2+\frac{\sigma^2}n)}
