--- a/static/stat562/hw_stat562.Rmd
+++ b/static/stat562/hw_stat562.Rmd
@@ -835,9 +835,11 @@ $$\pi(\theta|\bar x,\sigma^2,\mu,\tau^2)\sim N\left(\frac{\tau^2\bar x+\frac{\si
 $\pi(\sigma^2)=\frac{1}{\Gamma(\alpha)\beta^\alpha}\frac{1}{(\sigma^2)^{\alpha+1}}\mathrm{e}^{-\frac1{\beta\sigma^2}},0<\sigma^2<\infty$
 where $\alpha,\beta$ are positive constants. Show that the posterior distribution of $\sigma^2$ is $IG(\alpha+\frac{n-1}2,[\frac{n-1}2S^2+\frac1\beta]^{-1})$. Find the mean of this distribution, the Bayes estimator of $\sigma^2$.
 
-By the pdf of $\chi^2_{n-1}$, $f(x)=\frac{1}{2^{\frac{p}2}\Gamma(\frac{p}2)}x^{\frac{p}2-1}e^{-\frac{x}2}$
+Let $X=\frac{n-1}{\sigma^2}S^2\sim\chi^2_{n-1}$, $Y=S^2=\frac{\sigma^2}{n-1}X$, we have $f_{Y}(y)=f_X(x)|\frac{dx}{dy}|$
 
-$$f(S^2|\sigma^2)=\frac{1}{2^{\frac{n-1}2}\Gamma(\frac{n-1}2)}\left(\frac{n-1}{\sigma^2}S^2\right)^{\frac{n-1}2-1}e^{-\frac{n-1}{2\sigma^2}S^2}\cdot\frac{n-1}{\sigma^2}S^2$$
+By given $\sigma^2$ and the pdf of $\chi^2_{n-1}$ is $f(x)=\frac{1}{2^{\frac{p}2}\Gamma(\frac{p}2)}x^{\frac{p}2-1}e^{-\frac{x}2}$
+
+$$f_Y(S^2|\sigma^2)=f_X(\frac{n-1}{\sigma^2}S^2|\sigma^2)\left|\frac{d(\frac{n-1}{\sigma^2}S^2)}{d(S^2)}\right|=\frac{1}{2^{\frac{n-1}2}\Gamma(\frac{n-1}2)}\left(\frac{n-1}{\sigma^2}S^2\right)^{\frac{n-1}2-1}e^{-\frac{n-1}{2\sigma^2}S^2}\cdot\frac{n-1}{\sigma^2}$$
 
 Fot the kernel of a function is the main part of the function, the part that remains when constants are disregarded (Example 2.3.8). that is 
 
