--- a/docs/stat562/hw_stat562.Rmd
+++ b/docs/stat562/hw_stat562.Rmd
@@ -856,13 +856,15 @@ $E[\sigma^2|S^2]=\frac{\frac{n-1}2S^2+\frac1\beta}{\alpha+\frac{n-1}2-1}$
 
 Consider $\frac{\sum(X_i-\bar X)^2}{k}$ as an estimator of $\sigma^2$ (under normality). Find the K that minimizes MSE
 
-For $X_1,..X_i\sim iid\ n(\mu,\sigma^2)$, then $\frac{(n-1)S^2}{\sigma^2}\sim\chi^2_{n-1}$ and $S^2=\frac{\sum(X_i-\bar X)^2}{n-1}$ 
+For $X_1,..X_i\sim iid\ n(\mu,\sigma^2)$, then $\frac{(n-1)S^2}{\sigma^2}\sim\chi^2_{n-1}$, $S^2=\frac{\sum(X_i-\bar X)^2}{n-1}$.
 
-Let $M=\frac{\sum(X_i-\bar X)^2}{k}=\frac{(n-1)}{k}S^2=\frac{\sigma^2}{k}\frac{(n-1)S^2}{\sigma^2}$, then $\frac{k}{\sigma^2}M=\frac{(n-1)S^2}{\sigma^2}$.
+We have $E[S^2]=\sigma^2$ and $Var[\frac{(n-1)S^2}{\sigma^2}]=2{n-1}$, $Var[S^2]=\frac{2\sigma^4}{n-1}$.
 
-$Var[\frac{(n-1)S^2}{\sigma^2}]=\frac{k^2}{\sigma^4}Var[M]=2(n-1)\implies Var[M]=\frac{2(n-1)\sigma^4}{k^2}$
+Let $M=\frac{\sum(X_i-\bar X)^2}{k}=\frac{(n-1)}{k}S^2$, then
 
-$E[S^2]=\frac{k}{n-1}E[M]=\sigma^2\implies E[M]=\frac{n-1}{k}\sigma^2$
+$Var[M]=Var[\frac{(n-1)}{k}S^2]=\frac{(n-1)^2}{k^2}Var[S^2]=\frac{2(n-1)\sigma^4}{k^2}$
+
+$E[M]=E[\frac{(n-1)}{k}S^2]=\frac{(n-1)}{k}E[S^2]=\frac{n-1}{k}\sigma^2$
 
 $Bias[M]=E[M]-\sigma^2=\frac{n-k-1}{k}\sigma^2$
 
