--- a/docs/stat565/hw_stat565.Rmd
+++ b/docs/stat565/hw_stat565.Rmd
@@ -912,13 +912,14 @@ The plots of studentized residual versus factor levels didn't show obvious viola
 
 The QQ plot shows that some data points are not on the line and flattening at the extremes, which is a pattern typical of samples from a distribution with heavier tails than the normal.
 
-```{r echo=FALSE, warning=FALSE, out.width='20%'}
+```{r echo=FALSE, warning=FALSE, out.width='30%'}
 table_ingredients$student_resid <- rstudent(model_ingredients)
+ols_plot_resid_fit(lm(y~Trt+Day+Batch,data =table_ingredients))
 ols_plot_resid_stud_fit(lm(y~Trt+Day+Batch,data =table_ingredients))
+ols_plot_resid_qq(lm(y~Trt+Day+Batch,data =table_ingredients))
 ggplot(table_ingredients,aes(Trt,student_resid))+geom_dotplot(binaxis = "y", stackdir = "center",binwidth=0.1,alpha=0.6)+theme_light()
 ggplot(table_ingredients,aes(Day,student_resid))+geom_dotplot(binaxis = "y", stackdir = "center",binwidth=0.1,alpha=0.6)+theme_light()
 ggplot(table_ingredients,aes(Batch,student_resid))+geom_dotplot(binaxis = "y", stackdir = "center",binwidth=0.1,alpha=0.6)+theme_light()
-ols_plot_resid_qq(lm(y~Trt+Day+Batch,data =table_ingredients))
 ```
 
  (f) Report the complete code along with output here.
@@ -952,11 +953,12 @@ TukeyHSD(model_ingredients,conf.level = 0.95)
 ```{r,collapse=T, out.width='20%',fig.show='hold'}
 # (e)
 table_ingredients$student_resid <- rstudent(model_ingredients)
+ols_plot_resid_fit(lm(y~Trt+Day+Batch,data =table_ingredients))
 ols_plot_resid_stud_fit(lm(y~Trt+Day+Batch,data =table_ingredients))
+ols_plot_resid_qq(lm(y~Trt+Day+Batch,data =table_ingredients))
 ggplot(table_ingredients,aes(Trt,student_resid))+geom_dotplot(binaxis = "y", stackdir = "center",binwidth=0.1,alpha=0.6)+theme_light()
 ggplot(table_ingredients,aes(Day,student_resid))+geom_dotplot(binaxis = "y", stackdir = "center",binwidth=0.1,alpha=0.6)+theme_light()
 ggplot(table_ingredients,aes(Batch,student_resid))+geom_dotplot(binaxis = "y", stackdir = "center",binwidth=0.1,alpha=0.6)+theme_light()
-ols_plot_resid_qq(lm(y~Trt+Day+Batch,data =table_ingredients))
 ```
 
 ### Problem 3: 
