--- a/docs/stat562/hw_stat562.Rmd
+++ b/docs/stat562/hw_stat562.Rmd
@@ -870,6 +870,8 @@ $Bias[M]=E[M]-\sigma^2=\frac{n-k-1}{k}\sigma^2$
 
 $MSE[M]=Var[M]+Bias^2[M]=\frac{2(n-1)}{k^2}\sigma^4+\frac{(n-k-1)^2}{k^2}\sigma^4=\frac{n^2+k^2-2nk+2k-1}{k^2}\sigma^4$
 
+Set derivtive $MSE'[M]=\frac{(2k-2n+2)k^2-2k(n^2+k^2-2nk+2k-1)}{(k^2)^2}=\frac{2(nk-k+1-n^2)}{k^3}=0$, get $k=n+1$.
+
 Therefore, when $k=n+1$, $\min{MSE[M]}=\frac2{n+1}\sigma^4$
 
 ## 
